--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,26 @@
-pyarrow
-pandas
-openpyxl
-flask==2.0.1
-apscheduler
-python-dotenv
-pymongo
-certifi
-Gunicorn
-werkzeug==2.2.2
+APScheduler==3.10.4
+blinker==1.7.0
+certifi==2024.2.2
+click==8.1.7
+dnspython==2.6.1
+et-xmlfile==1.1.0
+Flask==3.0.2
+gunicorn==21.2.0
+importlib-metadata==7.0.1
+itsdangerous==2.1.2
+Jinja2==3.1.3
+MarkupSafe==2.1.5
+numpy==1.26.4
+openpyxl==3.1.2
+packaging==23.2
+pandas==2.2.1
+pyarrow==15.0.0
+pymongo==4.6.2
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+pytz==2024.1
+six==1.16.0
+tzdata==2024.1
+tzlocal==5.2
+Werkzeug==3.0.1
+zipp==3.17.0
