--- a/requirements.txt
+++ b/requirements.txt
@@ -3,11 +3,13 @@ certifi==2024.2.2
 click==8.1.7
 dnspython==2.6.1
 Flask==3.0.2
+gunicorn==21.2.0
 importlib_metadata==7.0.2
 itsdangerous==2.1.2
 Jinja2==3.1.3
 MarkupSafe==2.1.5
 numpy==1.26.4
+packaging==23.2
 pandas==2.2.1
 pymongo==4.6.2
 python-dateutil==2.9.0.post0
@@ -17,4 +19,3 @@ six==1.16.0
 tzdata==2024.1
 Werkzeug==3.0.1
 zipp==3.17.0
-gun
